test: Replace PyPDF2 with pdfplumber

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,8 @@ allowlist_externals =
 
 deps =
     -rrequirements.txt
+    typing-extensions
     decorator
-    dict2xml==1.7
-    pypdf2<1.27.0
+    pdfplumber
+    dict2xml
     weasyprint==55.0
