--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -152,7 +152,7 @@ jobs:
       run: |
         brew install make diffutils
         # Install WeasyPrint 68.0
-        brew install weasyprint@68.0
+        brew install weasyprint
         echo "Installing pip + wheel..."
         python -m pip install --upgrade pip wheel
         echo "Installing test dependencies..."
